--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "express-session": "^1.18.1",
     "googleapis": "^150.0.1",
     "mongoose": "^8.15.1",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.6.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
   },
